--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
             
             <!-- Slide 1: Executive Summary -->
             <section class="title-slide">
-                <h1 class="fragment fade-in" data-fragment-index="0">The Goal:</h1>
+                <!-- FIX: Removed "fragment" class so this appears on load -->
+                <h1>The Goal:</h1>
                 
                 <div class="goal fragment fade-in" data-fragment-index="1">
                     $1M
