--- a/slide2.html
+++ b/slide2.html
@@ -258,7 +258,7 @@
     </div>
 
     <!-- Arrows -->
-    <a href="slide2.html" class="arrow-nav arrow-left">←</a>
-    <a href="slide4.html" class="arrow-nav arrow-right">→</a>
+    <a href="index.html" class="arrow-nav arrow-left">←</a>
+    <a href="slide3.html" class="arrow-nav arrow-right">→</a>
 </body>
 </html>
