--- a/slide7.html
+++ b/slide7.html
@@ -171,6 +171,6 @@
 
     <!-- Arrows -->
     <a href="slide6.html" class="arrow-nav arrow-left">←</a>
-    <a href="slide8.html" class="arrow-nav arrow-right">→</a>
+    <a href="index.html" class="arrow-nav arrow-right">→</a>
 </body>
 </html>
