--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-Of course. Acting as your designer, I've crafted the first slide, `index.html`.
-
-This title slide is designed to be impactful and set a high-tech, premium tone for the entire presentation. It features a dynamic, animated background of flowing particles, representing the "engine" concept. The text animates into view sequentially to create a focused, professional reveal.
-
-Here is the complete code. Simply copy it, save it as `index.html`, and open it in your browser or deploy it to Vercel.
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,9 +14,6 @@ Here is the complete code. Simply copy it, save it as `index.html`, and open it 
             --ow-gray: #9F9F9F;
             --ow-dark-gray: #101010;
             --ow-black: #000000;
-            --info-blue: #00A9E0;
-            --info-purple: #9E00FF;
-            --info-green: #00E070;
         }
 
         body, html {
@@ -40,13 +30,21 @@ Here is the complete code. Simply copy it, save it as `index.html`, and open it 
             align-items: center;
         }
 
-        #particle-canvas {
+        .background-logo {
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 50vw; /* Adjusted for horizontal logo */
             z-index: 1;
+            opacity: 0;
+            animation: slowFadeIn 3s 0.5s ease-out forwards;
+        }
+
+        .background-logo img {
+            width: 100%;
+            height: auto;
+            opacity: 0.15; /* Adjusted for PNG */
         }
 
         .slide-container {
@@ -61,7 +59,7 @@ Here is the complete code. Simply copy it, save it as `index.html`, and open it 
             font-size: 4.5vw;
             font-weight: 700;
             margin: 0;
-            animation: fadeIn 1s ease-out forwards, slideUp 1s ease-out forwards;
+            animation: fadeIn 1s 1s ease-out forwards, slideUp 1s 1s ease-out forwards;
             opacity: 0;
         }
         
@@ -75,7 +73,7 @@ Here is the complete code. Simply copy it, save it as `index.html`, and open it 
             font-weight: 400;
             color: var(--ow-gray);
             margin: 1.5rem 0;
-            animation: fadeIn 1s 1s ease-out forwards, slideUp 1s 1s ease-out forwards;
+            animation: fadeIn 1s 2s ease-out forwards, slideUp 1s 2s ease-out forwards;
             opacity: 0;
         }
 
@@ -85,7 +83,7 @@ Here is the complete code. Simply copy it, save it as `index.html`, and open it 
             font-weight: 400;
             color: var(--ow-white);
             margin-top: 3rem;
-            animation: fadeIn 1s 2s ease-out forwards, slideUp 1s 2s ease-out forwards;
+            animation: fadeIn 1s 3s ease-out forwards, slideUp 1s 3s ease-out forwards;
             opacity: 0;
         }
         
@@ -93,6 +91,9 @@ Here is the complete code. Simply copy it, save it as `index.html`, and open it 
             .title { font-size: 8vw; }
             .subtitle { font-size: 4vw; }
             .author { font-size: 3vw; }
+            .background-logo {
+                width: 80vw;
+            }
         }
 
         .navigation {
@@ -100,7 +101,7 @@ Here is the complete code. Simply copy it, save it as `index.html`, and open it 
             bottom: 2rem;
             right: 2rem;
             z-index: 10;
-            animation: fadeIn 1s 3s ease-out forwards;
+            animation: fadeIn 1s 4s ease-out forwards;
             opacity: 0;
         }
 
@@ -138,6 +139,11 @@ Here is the complete code. Simply copy it, save it as `index.html`, and open it 
             to { opacity: 1; }
         }
 
+        @keyframes slowFadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
         @keyframes slideUp {
             from { transform: translateY(20px); }
             to { transform: translateY(0); }
@@ -157,7 +163,10 @@ Here is the complete code. Simply copy it, save it as `index.html`, and open it 
 </head>
 <body>
 
-    <canvas id="particle-canvas"></canvas>
+    <div class="background-logo">
+        <!-- The 'src' now correctly points to the logo in your assets folder -->
+        <img src="assets/Overwolf_logo_PNG_horizontal.png" alt="Overwolf Logo Background">
+    </div>
 
     <div class="slide-container">
         <h1 class="title">Building Overwolf’s Programmatic <span>Revenue Engine</span></h1>
@@ -171,100 +180,5 @@ Here is the complete code. Simply copy it, save it as `index.html`, and open it 
         </a>
     </div>
 
-    <script>
-        const canvas = document.getElementById('particle-canvas');
-        const ctx = canvas.getContext('2d');
-
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-
-        let particlesArray;
-
-        const colors = ['#D34037', '#00A9E0', '#9E00FF', '#00E070', '#9F9F9F'];
-
-        class Particle {
-            constructor(x, y, directionX, directionY, size, color) {
-                this.x = x;
-                this.y = y;
-                this.directionX = directionX;
-                this.directionY = directionY;
-                this.size = size;
-                this.color = color;
-            }
-            draw() {
-                ctx.beginPath();
-                ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2, false);
-                ctx.fillStyle = this.color;
-                ctx.fill();
-            }
-            update() {
-                if (this.x > canvas.width || this.x < 0) {
-                    this.directionX = -this.directionX;
-                }
-                if (this.y > canvas.height || this.y < 0) {
-                    this.directionY = -this.directionY;
-                }
-                this.x += this.directionX;
-                this.y += this.directionY;
-                this.draw();
-            }
-        }
-
-        function init() {
-            particlesArray = [];
-            let numberOfParticles = (canvas.height * canvas.width) / 9000;
-            for (let i = 0; i < numberOfParticles; i++) {
-                let size = (Math.random() * 2) + 1;
-                let x = (Math.random() * ((innerWidth - size * 2) - (size * 2)) + size * 2);
-                let y = (Math.random() * ((innerHeight - size * 2) - (size * 2)) + size * 2);
-                let directionX = (Math.random() * .4) - .2;
-                let directionY = (Math.random() * .4) - .2;
-                let color = colors[Math.floor(Math.random() * colors.length)];
-                particlesArray.push(new Particle(x, y, directionX, directionY, size, color));
-            }
-        }
-
-        function connect() {
-            let opacityValue = 1;
-            for (let a = 0; a < particlesArray.length; a++) {
-                for (let b = a; b < particlesArray.length; b++) {
-                    let distance = ((particlesArray[a].x - particlesArray[b].x) * (particlesArray[a].x - particlesArray[b].x))
-                    + ((particlesArray[a].y - particlesArray[b].y) * (particlesArray[a].y - particlesArray[b].y));
-                    if (distance < (canvas.width / 7) * (canvas.height / 7)) {
-                        opacityValue = 1 - (distance / 20000);
-                        let dx = particlesArray[a].x - particlesArray[b].x;
-                        let dy = particlesArray[a].y - particlesArray[b].y;
-                        let color = particlesArray[a].color === particlesArray[b].color ? particlesArray[a].color : 'rgba(159, 159, 159, ' + opacityValue + ')';
-                        ctx.strokeStyle = color;
-                        ctx.lineWidth = 1;
-                        ctx.beginPath();
-                        ctx.moveTo(particlesArray[a].x, particlesArray[a].y);
-                        ctx.lineTo(particlesArray[b].x, particlesArray[b].y);
-                        ctx.stroke();
-                    }
-                }
-            }
-        }
-
-        function animate() {
-            requestAnimationFrame(animate);
-            ctx.clearRect(0, 0, innerWidth, innerHeight);
-
-            for (let i = 0; i < particlesArray.length; i++) {
-                particlesArray[i].update();
-            }
-            connect();
-        }
-
-        window.addEventListener('resize', () => {
-            canvas.width = innerWidth;
-            canvas.height = innerHeight;
-            init();
-        });
-
-        init();
-        animate();
-    </script>
 </body>
 </html>
-```
