--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
     
             <h1 class="title">Building Overwolf’s Programmatic <span>Revenue Engine</span></h1>
-            <h2 class="subtitle">Execution Plan, Team Structure & Operational Command</h2>
+            <h2 class="subtitle">Execution Plan, Team Structure & Operational Leadership</h2>
             <p class="author">Adar Kleinman</p>
         </div>
     </div>
