--- a/slide11.html
+++ b/slide11.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Overwolf GTM - Risks & Mitigation</title>
+    <title>Overwolf GTM - Risks & Action Plan</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -81,7 +81,7 @@
             border-top: 4px solid var(--ow-red);
             animation-delay: 1.2s;
         }
-        .card.mitigation {
+        .card.action-plan {
             border-top: 4px solid var(--info-green);
             animation-delay: 1.5s;
         }
@@ -98,7 +98,7 @@
             height: 28px;
         }
         .risks .card-icon { fill: var(--ow-red); }
-        .mitigation .card-icon { fill: var(--info-green); }
+        .action-plan .card-icon { fill: var(--info-green); }
 
         .card-title {
             font-family: 'Montserrat', sans-serif;
@@ -185,7 +185,7 @@
 
     <div class="slide-wrapper">
         <div class="slide-container">
-            <h1 class="slide-title">Risks & Mitigation</h1>
+            <h1 class="slide-title">Risks & Action Plan</h1>
             
             <div class="content-grid">
                 <div class="card risks">
@@ -208,7 +208,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card Action">
+                <div class="card action-plan">
                     <div class="card-header">
                         <svg class="card-icon" viewBox="0 0 24 24"><path d="M12,2C17.52,2 22,6.48 22,12C22,17.52 17.52,22 12,22C6.48,22 2,17.52 2,12C2,6.48 6.48,2 12,2M11,16.5L18,9.5L16.59,8.09L11,13.67L7.41,10.09L6,11.5L11,16.5Z"/></svg>
                         <h2 class="card-title">Action Plan</h2>
