--- a/slide3.html
+++ b/slide3.html
@@ -246,7 +246,7 @@
                 <div class="track problem">
                     <h2 class="track-title">Typical Pipeline: Slow & Inefficient</h2>
                     <div class="track-path" style="--path: path('M 50 40 C 150 80, 250 0, 350 40 S 550 80, 650 40, 850 0, 950 40'); --duration: 8s; --delay: 2s;">
-                        <svg><path class="track-line" d="M 50 40 C 150 80, 250 0, 350 40 S 550 80, 650 40, 850 0, 950 40"/></svg>
+                        <svg viewBox="0 0 1000 80" preserveAspectRatio="none"><path class="track-line" d="M 50 40 C 150 80, 250 0, 350 40 S 550 80, 650 40, 850 0, 950 40"/></svg>
                         <div class="track-node node-1"><div class="node-label">Advertiser</div></div>
                         <div class="track-node node-2"><div class="node-label">DSP</div><div class="node-fee">-15%</div></div>
                         <div class="track-node node-3"><div class="node-label">DMP</div><div class="node-fee">-5%</div></div>
@@ -259,7 +259,7 @@
                 <div class="track solution">
                     <h2 class="track-title">Overwolf's Direct Path: Fast & Efficient</h2>
                      <div class="track-path" style="--path: path('M 50 40 L 950 40'); --duration: 3s; --delay: 2s;">
-                        <svg><path class="track-line" d="M 50 40 L 950 40"/></svg>
+                        <svg viewBox="0 0 1000 80" preserveAspectRatio="none"><path class="track-line" d="M 50 40 L 950 40"/></svg>
                         <div class="track-node node-1"><div class="node-label">Advertiser/DSP</div></div>
                         <div class="track-node node-2"><div class="node-label">Overwolf</div></div>
                         <div class="track-node node-3"><div class="node-label">Publisher</div></div>
