--- a/slide12.html
+++ b/slide12.html
@@ -173,7 +173,7 @@
                 <div class="step-card">
                     <svg class="step-icon" viewBox="0 0 24 24"><path d="M16,13C15.71,13 15.38,13 15.03,13.05C16.19,13.89 17,15 17,16.5V19H23V16.5C23,14.17 18.33,13 16,13M8,13C5.67,13 1,14.17 1,16.5V19H15V16.5C15,14.17 10.33,13 8,13M8,11.5A3.5,3.5 0 0,0 11.5,8A3.5,3.5 0 0,0 8,4.5A3.5,3.5 0 0,0 4.5,8A3.5,3.5 0 0,0 8,11.5M16,11.5A3.5,3.5 0 0,0 19.5,8A3.5,3.5 0 0,0 16,4.5A3.5,3.5 0 0,0 12.5,8A3.5,3.5 0 0,0 16,11.5Z"/></svg>
                     <h3 class="step-title">Finalize Team Build</h3>
-                    <p class="step-description">Secure approval for the initial team structure and begin the hiring process for the Sr. Sales Manager role.</p>
+                    <p class="step-description">Secure approval for the initial team structure and begin the hiring process for a US Sales Manager role.</p>
                 </div>
                 <div class="step-card">
                     <svg class="step-icon" viewBox="0 0 24 24"><path d="M20,6H4V4H20V6M20,12H4V10H20V12M20,18H4V16H20V18M21,2H3C1.9,2 1,2.9 1,4V20C1,21.1 1.9,22 3,22H21C22.1,22 23,21.1 23,20V4C23,2.9 22.1,2 21,2Z"/></svg>
