--- a/slide1.html
+++ b/slide1.html
@@ -182,7 +182,7 @@
 
     <div class="slide-wrapper">
         <div class="slide-container">
-            <h1 class="slide-title">Our Agenda</h1>
+            <h1 class="slide-title">Agenda</h1>
             
             <div class="agenda-list">
                 <div class="connector-line"></div>
