--- a/slide2.html
+++ b/slide2.html
@@ -267,7 +267,7 @@
     </div>
 
     <div class="navigation">
-         <a href="index.html" class="nav-arrow" aria-label="Previous Slide">
+         <a href="slide1.html" class="nav-arrow" aria-label="Previous Slide">
             <svg style="transform: rotate(180deg);" viewBox="0 0 24 24"><path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"/></svg>
         </a>
         <a href="slide2.1.html" class="nav-arrow" aria-label="Next Slide">
