--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 
     <div class="navigation">
-         <a href="#" class="nav-arrow disabled" aria-label="Previous Slide">
+         <a href="#" class="slide12.html" aria-label="Previous Slide">
             <svg style="transform: rotate(180deg);" viewBox="0 0 24 24"><path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"/></svg>
         </a>
         <a href="slide1.html" class="nav-arrow" aria-label="Next Slide">
