--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             --ow-red: #D34037;
             --ow-white: #FFFFFF;
             --ow-gray: #9F9F9F;
-            --ow-dark-gray: #101010;
-            --ow-black: #000000;
+            --ow-dark-gray: #1E1E1E;
+            --ow-black: #101010;
         }
 
         body, html {
@@ -57,7 +57,7 @@
         }
 
         .title {
-            font-size: 3.5rem; /* More refined size */
+            font-size: 3.5rem;
             font-weight: 700;
             margin: 0;
             animation: fadeIn 1s 1.5s ease-out forwards, slideUp 1s 1.5s ease-out forwards;
@@ -70,7 +70,7 @@
         }
 
         .subtitle {
-            font-size: 1.5rem; /* More refined size */
+            font-size: 1.5rem;
             font-weight: 400;
             color: var(--ow-gray);
             margin: 1.5rem 0;
@@ -80,7 +80,7 @@
 
         .author {
             font-family: 'Lato', sans-serif;
-            font-size: 1.25rem; /* More refined size */
+            font-size: 1.25rem;
             font-weight: 400;
             color: var(--ow-white);
             margin-top: 4rem;
@@ -97,7 +97,7 @@
         }
 
         .navigation {
-            position: absolute;
+            position: fixed;
             bottom: 2rem;
             left: 50%;
             transform: translateX(-50%);
@@ -175,14 +175,14 @@
             </div>
     
             <h1 class="title">Building Overwolf’s Programmatic <span>Revenue Engine</span></h1>
-            <h2 class="subtitle">Execution Plan, Team Structure & Operational Leadership</h2>
+            <h2 class="subtitle">Execution Plan, Team Structure & Operational Command</h2>
             <p class="author">Adar Kleinman</p>
         </div>
     </div>
 
 
     <div class="navigation">
-         <a href="#" class="slide12.html" aria-label="Previous Slide">
+         <a href="slide12.html" class="nav-arrow" aria-label="Previous Slide">
             <svg style="transform: rotate(180deg);" viewBox="0 0 24 24"><path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"/></svg>
         </a>
         <a href="slide1.html" class="nav-arrow" aria-label="Next Slide">
