--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         .header-logo {
             margin-bottom: 4rem;
             opacity: 0;
-            animation: fadeIn 1s 0.5s ease-out forwards;
+            animation: fadeIn 0.8s 0.2s ease-out forwards; /* Faster */
         }
 
         .header-logo img {
@@ -60,7 +60,7 @@
             font-size: 3.5rem;
             font-weight: 700;
             margin: 0;
-            animation: fadeIn 1s 1.5s ease-out forwards, slideUp 1s 1.5s ease-out forwards;
+            animation: fadeIn 0.8s 0.8s ease-out forwards, slideUp 0.8s 0.8s ease-out forwards; /* Faster */
             opacity: 0;
         }
         
@@ -74,7 +74,7 @@
             font-weight: 400;
             color: var(--ow-gray);
             margin: 1.5rem 0;
-            animation: fadeIn 1s 2.5s ease-out forwards, slideUp 1s 2.5s ease-out forwards;
+            animation: fadeIn 0.8s 1.4s ease-out forwards, slideUp 0.8s 1.4s ease-out forwards; /* Faster */
             opacity: 0;
         }
 
@@ -84,7 +84,7 @@
             font-weight: 400;
             color: var(--ow-white);
             margin-top: 4rem;
-            animation: fadeIn 1s 3.5s ease-out forwards, slideUp 1s 3.5s ease-out forwards;
+            animation: fadeIn 0.8s 2.0s ease-out forwards, slideUp 0.8s 2.0s ease-out forwards; /* Faster */
             opacity: 0;
         }
         
@@ -105,7 +105,7 @@
             display: flex;
             justify-content: space-between;
             z-index: 10;
-            animation: fadeIn 1s 4.5s ease-out forwards;
+            animation: fadeIn 0.8s 2.5s ease-out forwards; /* Faster */
             opacity: 0;
         }
 
