--- a/slide6.html
+++ b/slide6.html
@@ -293,7 +293,7 @@
                     <div class="branch-container">
                         <div class="branch">
                             <div class="org-box level-2">
-                                <div class="name">Sr. Sales Manager (US)</div>
+                                <div class="name">Sales Manager (US)</div>
                                 <div class="title">Direct Report</div>
                             </div>
                         </div>
