--- a/slide9.html
+++ b/slide9.html
@@ -207,7 +207,7 @@
                             <svg class="card-icon" viewBox="0 0 24 24"><path d="M11.8,10.9C9.53,10.31 9,9.7 9,8.85C9,7.76 9.91,7 11.7,7C13.57,7 14.44,7.85 14.5,9.1H16.71C16.64,7.38 15.68,5.7 13.79,5.19V3H10.21V5.16C8.27,5.58 6.5,6.84 6.5,8.77C6.5,11.08 8.41,12.23 11.2,12.88C13.7,13.44 14.5,14.28 14.5,15.26C14.5,15.95 14,17 11.8,17C9.94,17 9.13,16.08 9.02,14.9H6.8C6.92,17.09 8.56,18.32 10.48,18.73V21H14V18.85C16.06,18.39 17.5,17.12 17.5,15.1C17.5,12.76 15.53,11.54 11.8,10.9Z"/></svg>
                             <h3 class="card-title">Net New Revenue</h3>
                         </div>
-                        <div class="card-value">$1M by Q1</div>
+                        <div class="card-value">$1M by Q1 2026</div>
                         <p class="card-description">Total new programmatic revenue generated.</p>
                     </div>
                     <div class="kpi-card">
