--- a/slide9.html
+++ b/slide9.html
@@ -215,7 +215,7 @@
                             <svg class="card-icon" viewBox="0 0 24 24"><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,16.5L6.5,12L7.91,10.59L11,13.67L16.59,8.09L18,9.5L11,16.5Z"/></svg>
                             <h3 class="card-title">Win Rate</h3>
                         </div>
-                        <div class="card-value">25%+</div>
+                        <div class="card-value">~25%</div>
                         <p class="card-description">% of qualified publisher deals closed.</p>
                     </div>
                     <div class="kpi-card">
