--- a/slide12.html
+++ b/slide12.html
@@ -181,7 +181,7 @@
                     <p class="step-description">Allocate the necessary budget and technical resources to support the GTM plan and operational framework.</p>
                 </div>
                 <div class="step-card">
-                    <svg class="step-icon" viewBox="0 0 24 24"><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,16.5L6.5,12L7.91,10.59L11,13.67L16.59,8.09L18,9.5L11,16.5Z"/></svg>
+                    <svg class="step-icon" viewBox="0 0 24 24"><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,16.5L6.5,12L7.91,10.59L11,13.67L16.59,8.09L18,Q7,16.5Z"/></svg>
                     <h3 class="step-title">Execute First Milestones</h3>
                     <p class="step-description">Begin publisher outreach immediately and target the first go-live partners to kickstart the revenue ramp.</p>
                 </div>
@@ -189,7 +189,7 @@
 
             <div class="close-section">
                 <h2 class="thank-you">Thank You</h2>
-                <p class="qa">Q&A</p>
+                <p class="qa"></p>
             </div>
         </div>
     </div>
