--- a/slide1.html
+++ b/slide1.html
@@ -198,7 +198,7 @@
                 </div>
                 <div class="agenda-item item-3">
                     <div class="item-number num-3">3</div>
-                    <h3 class="item-title">The System for Success (Proof)</h3>
+                    <h3 class="item-title">Measuring Success (Proof)</h3>
                     <p class="item-description">The operational framework, KPIs, and feedback loops that ensure sustainable, predictable growth.</p>
                 </div>
             </div>
